# xsd-fiddle

./: Cargo.toml  api.xsd
src/: code_formatter.rs  kind.rs  lib.rs  rust_fmt.rs
src/xml/: complex_type.rs  element.rs  kind.rs  mod.rs  occurence.rs  schema.rs  simple_type.rs
