[package]
name = "xsd-test"
version = "0.1.0"
authors = ["Niclas Rosengren <niclas.rosengren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
serde = { version = "1.0.125", default_features = false, features = [ "derive" ] }
heck = "0.3.2"


[dependencies.serde-xml-rs]
git = "ssh://git@github.com/RReverser/serde-xml-rs.git"
branch = "master"
